# asset-registry

./: README.md  donetillnow.txt  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/registry/asset/: route.ts
app/api/registry/collection/: route.ts
app/api/registry/mint/: route.ts
app/asset/[hash]/: page.tsx
app/dashboard/: page.tsx
app/register/: page.tsx
app/transfer/: page.tsx
app/verify/: page.tsx
app/verify/[id]/: page.tsx
components/asset/: TransferBox.tsx  TransferModal.tsx  UploadBox.tsx
components/certificate/: CertificateGenerator.tsx  DownloadCertificateButton.tsx  OwnershipCertificate.tsx
components/dashboard/: ActivityTable.tsx  AssetGrid.tsx
components/ui/: Badge.tsx  Button.tsx  Card.tsx  CopyButton.tsx  Footer.tsx  IdentityBar.tsx  Loader.tsx  Navbar.tsx  Timeline.tsx
components/wallet/: ConnectButton.tsx  WalletProvider.tsx
contract/registry/: Cargo.toml
contract/registry/.cargo/: config.toml
contract/registry/src/: lib.rs  test.rs
contract/registry/test_snapshots/test/: test_register_asset.1.json  test_transfer_by_attacker_fails.1.json  test_transfer_by_owner.1.json
lib/cache/: ownershipCache.ts
lib/crypto/: hash.ts
lib/firebase/: admin.ts  config.ts
lib/registry/: idGenerator.ts  schema.ts
lib/state/: walletStore.ts
lib/stellar/: fetchAccountHistory.ts  ownership.ts  parseMemo.ts  registerAsset.ts  registryContract.ts  resolveOwner.ts  server.ts  transferAsset.ts  verifyAsset.ts  verifyOwnership.ts
tests/: hash.test.ts  memo.test.ts  ownership.test.ts
(+1 files in other folders)
